--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.3",
+    "@auth0/angular-jwt": "^5.2.0",
     "express": "^4.18.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
