--- a/angular.json
+++ b/angular.json
@@ -28,11 +28,11 @@
               "src/web.config"
             ],
             "styles": [
-              "src/styles.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeflex/primeflex.min.css"
+              "node_modules/primeflex/primeflex.min.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
